testcases/semantic_error/duplicate_layout.shp
class Main<p1> where
    p1: [Main<p1>]
{
    f1: i32;
}

layout Foo: Main = rec{f1};
layout Foo: Main = rec{f1};
